Convert the default pixel correctly

We should call the conversion function from the source color space

BUG:340947